--- a/config/database.yml
+++ b/config/database.yml
@@ -6,6 +6,7 @@ development:
   username: root
   password:
   host: localhost
+  min_messages: warning
 
 test: &test
   adapter: postgresql
@@ -15,6 +16,7 @@ test: &test
   username: root
   password:
   host: localhost
+  min_messages: warning
 
 cucumber:
   <<: *test
