--- a/config/database.yml
+++ b/config/database.yml
@@ -1,13 +1,13 @@
 development: &default
   adapter: postgresql
-  database: discepto_development
+  database: thoughts_on_this_development
   pool: 5
   timeout: 5000
   min_messages: warning
 
 test: &test
   <<: *default
-  database: discepto_test
+  database: thoughts_on_this_test
 
 cucumber:
   <<: *test
